assets/css/additional.css
html {
  overflow-x: hidden;
}

html::-webkit-scrollbar {
  width: 0rem;
}

html::selection {
  background-color: #ffc107;
  color: #212529;
}

.sticky {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 1000;
  transform: translateY(0);
}

.active {
  color: #ffc107 !important;
  font-weight: bold !important;
}

.bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-color: #ffc107;
  opacity: 0.9;
}

.MoEYS-certificate::before,
.UC-certificate::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0.1;
}

.MoEYS-certificate::before {
  background-image: url(../img/MoEYS-Cambodia.png);
}

.UC-certificate::before {
  background-image: url(../img/uc.png);
  opacity: 0.25;
}

canvas {
  display: block;
}

.gpa-chart-container {
  position: relative;
  margin-bottom: 20px;
}

